--- a/client/src/theme/Components/browse/project-list/_grid-project.scss
+++ b/client/src/theme/Components/browse/project-list/_grid-project.scss
@@ -24,24 +24,27 @@
 
   ul {
     @include listHorizontal;
-    display: block;
+    display: flex;
+    flex-flow: row wrap;
     width: 100%;
 
     li {
-      display: inline-block;
-      width: 50%;
-      // Ensures flush grid elements, requires reset for any child elements
-      font-size: 0;
-      vertical-align: top;
+      flex: 1 1 50%;
+      max-width: 50%;
+      // // Ensures flush grid elements, requires reset for any child elements
+      // font-size: 0;
+      // vertical-align: top;
       opacity: 1;
       transition: opacity $duration $timing;
 
       @include respond($break60) {
-        width: 33.333%;
+        flex-basis: 33.333%;
+        max-width: 33.333%;
       }
 
       @include respond($break85) {
-        width: 25%;
+        flex-basis: 25%;
+        max-width: 25%;
       }
     }
 
@@ -56,7 +59,9 @@
   }
 
   a {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     padding: 12px;
     text-decoration: none;
 
@@ -68,22 +73,46 @@
       padding: 26px;
     }
 
-    .figure-wrapper {
-      max-width: 180px;
+    // Figure
+    .cover {
+      position: relative;
+      width: 100%;
+      height: 160px;
+      margin-bottom: 10px;
 
-      &.dim figure img, &.dim figure svg {
+      &.dim img, &.dim svg {
         opacity: 0.25;
+      }
+
+      img, svg {
+        width: auto;
+        height: 100%;
+      }
+
+      img {
+        border: 4px solid transparent;
+        transition: border $duration $timing;
+      }
+
+      svg {
+        max-width: 130px;
+        max-height: 130px;
+        transition: fill $duration $timing;
+
+        // Sub class used only by SVG
+        .background {
+          stroke: transparent;
+          stroke-linecap: square;
+          stroke-width: 5px;
+        }
       }
     }
 
-    // Figure
-    figure {
-      @include projectGridFigure;
-    }
-
     &:hover, &:focus {
+      @include panelRounded;
       background-color: $neutral10;
       outline: 0;
+      box-shadow: 0 31px 26px -13px rgba($neutralBlack, 0.13);
 
       img {
         border-color: $accentPrimary;
@@ -94,13 +123,9 @@
       }
     }
 
-    // Meta data
-    //.meta {
-    //  display: none;
-    //}
-
     .title {
       @include gridProjectTitle;
+      margin-top: 0;
       margin-bottom: 8px;
       font-size: 16px;
     }
